[package]
name = "tc2-config"
version = "0.1.0"
edition = "2021"
resolver = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version ="1.0.183", features = ["derive"]}
toml = "0.7.6"
chrono = "0.4.31"
chrono-tz = "0.8.3"
num-traits = "0.2.16"
rtz = { version = "0.5.3", features = ["tz-ned", "self-contained", "extrasimplified"], default-features = false }
byteorder = "1.5.0"
log = "0.4.20"
triangulate = "0.2.0"
